# tap-hubspot

./: .gitignore  Pipfile  README.md  meltano.yml  pyproject.toml  sample-config.json  schema.py  setup.py  tap-hubspot.sh
tap_hubspot/: streams.py  tap.py
tap_hubspot/schemas/: broadcasts.json  domains.json  events.json  publishing_channels.json  tickets.json
tap_hubspot/tests/: test_core.py
