[tool.poetry]
name = "tap-hubspot"
version = "0.0.1"
description = "`tap-hubspot` is Singer tap for hubspot, built with the Singer SDK."
authors = ["Ayo Bamisile-Aje"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
requests = "^2.25.1"
singer-sdk = "^0.1.0"
meltano = "*"
singer-tools = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-hubspot = 'tap_hubspot.tap:cli'
